<resources>
    <string name="app_name">Practica5</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="tarea_fragment_label">Tarea</string>
    <string name="lista_fragment_label">Lista</string>
    <string name="categoria">Categoria</string>
    <string name="prioridad">Prioridad</string>
    <string-array name="categoria">
        <item>Reparación</item>
        <item>Instalación</item>
        <item>Mantenimiento</item>
        <item>Comercial</item>
        <item>otros</item>
    </string-array>
    <string-array name="prioridad">
        <item>Baja</item>
        <item>Media</item>
        <item>Alta</item>
    </string-array>
    <string name="mensaje_categoria">Has seleccionado %1$s como categoría</string>
    <string name="pagado">Pagado</string>
    <string name="abierta">Abierta</string>
    <string name="en_curso">En Curso</string>
    <string name="cerrada">Cerrada</string>
    <string name="estado_de_la_tarea">Estado de la tarea</string>
    <string name="horas_trabajadas">Llevo %1$d horas trabajadas</string>
    <string name="valoracion_del_cliente">Valoracion del cliente</string>
    <string name="prueba_edici_n">PRUEBA EDICIÓN</string>
</resources>